2007-01-11  Steve M. Robbins  <smr@sumost.ca>

	* include/cppunit/plugin/TestPlugIn.h (struct CppUnitTestPlugIn): 
	* include/cppunit/extensions/TestFixtureFactory.h (class TestFixtureFactory): 
	* include/cppunit/XmlOutputterHook.h (XmlOutputterHook): Add
	virtual destructor to virtual class.

	* examples/cppunittest/TestAssertTest.cpp: Put a C++ statement in
	the first argument of CPPUNIT_ASSERT_THROW() and
	CPPUNIT_ASSERT_NO_THROW().

	* examples/hierarchy/main.cpp (main): Return value now reflects
	whether tests passed.
	* examples/hierarchy/Makefile.am (XFAIL_TESTS): New.  Mark hierachy
	test program as an expected failure.

	* Makefile.am (dist-hook): Don't fail if $(distdir)/lib already
	exists.

	* config/bb_enable_doxygen.m4 (BB_ENABLE_DOXYGEN): Add quotes
	around function name, BB_ENABLE_DOXYGEN.

2006-10-26 Baptiste Lepilleur <blep@users.sourceforge.net>
   * include/cppunit/TestResult.h:
   * include/cppunit/ui/Config.h: fixed compilation issues with QtTestRunner.

2006-06-29 Baptiste Lepilleur <blep@users.sourceforge.net>
   * Makefile.am:
   * lib/.keepme: added dummy file to prevent lib/ removal by some
     unzip clients. Fixed bug #1527877 .

   * src/msvc6/TesRunner/TestRunner.rc:
   * src/msvc6/testpluginrunner/TestPlugInRunner.rc: Fixed bug #1528212
     (some resources wrongly tagged as French).

2006-06-29 Baptiste Lepilleur <blep@users.sourceforge.net>
  * include/cppunit/ui/text/TextTestRunner.h
  * src/cppunit/TextTestRunner.cpp: applied patch #1210013 to remove
    hidden virtual function warning.

  * autogen.sh: applied patch #1449380 contributed by Sander Temme
    to allow running autogen on Mac OS X.

  * doc/header.html: updated to handle new tabs css required for
    html doc generated with doxygen 1.4.7.

  * src/msvc6/testrunner/MsDevCallerListCtrl.cpp: applied correction
    provided to fix bug #1498175 (double click on failure does not
    goto failure).

2006-03-04 Baptiste Lepilleur <blep@users.sourceforge.net>